datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
  // previewFeatures = []
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  email     String   @unique
  password  String
  firstname String?
  lastname  String?
  role      Role
  trees     Tree[]
}

model Node {
  id            String   @id @default(cuid())
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
  firstname     String
  lastname      String?
  description   String?
  parents       Node[] @relation(name: "NodeRelation", references: [id])
  children      Node[] @relation(name: "NodeRelation", references: [id])
  tree          Tree @relation(fields: [treeId], references: [id])
  treeId        String
}

model Tree {
   id           String   @id @default(cuid())
   createdAt    DateTime @default(now())
   updatedAt    DateTime @updatedAt
   name         String
   creator      User @relation(fields: [creatorId], references: [id])
   creatorId    String
   nodes        Node[]
}

enum Role {
  ADMIN
  USER
}

model RefreshToken {
   id           String   @id @default(cuid())
   createdAt    DateTime @default(now())
   user         User @relation(references: [id])
}
