//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  role Role [not null]
  trees Tree
  RefreshToken RefreshToken
}

Table Node {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  firstname String [not null]
  lastname String
  description String
  parents Node
  children Node
  tree Tree [not null]
  treeId String [not null]
}

Table Tree {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  creator User [not null]
  creatorId String [not null]
  nodes Node
}

Table RefreshToken {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  user User [not null]
  userId String [not null]
}

Table NodeRelation {
  parentsId String [ref: > Node.id]
  childrenId String [ref: > Node.id]
}

Enum Role {
  ADMIN
  USER
}

Ref: Node.treeId > Tree.id

Ref: Tree.creatorId > User.id

Ref: RefreshToken.userId > User.id